--- a/doc/templates/contract.hbs
+++ b/doc/templates/contract.hbs
@@ -9,10 +9,22 @@
 ```solidity
 function {{name}}({{args}}){{#if outputs}} → {{outputs}}{{/if}}
 ```
-
 {{{natspec.userdoc}}}
 
 {{{natspec.devdoc}}}
+
+{{#if natspec.params}}
+#### Parameters:
+{{#natspec.params}}
+    - `{{param}}`: {{description}}
+{{/natspec.params}}
+{{/if}}
+{{#if natspec.returns}}
+    #### Return Values:
+    {{#natspec.returns}}
+        - {{param}} {{description}}
+    {{/natspec.returns}}
+{{/if}}
 
 {{/each}}
 
