--- a/doc/templates/contract.hbs
+++ b/doc/templates/contract.hbs
@@ -2,10 +2,10 @@
 {{{natspec.devdoc}}}
 
 {{#if ownFunctions}}
-## Functions
+# Functions
 {{/if}}
 {{#ownFunctions}}
-### {{name}}
+## {{name}}
 ```solidity
   function {{name}}(
     {{#natspec.params}}
@@ -16,23 +16,24 @@
 {{#if natspec.userdoc}}{{natspec.userdoc}}{{/if}}
 {{#if natspec.devdoc}}{{natspec.devdoc}}{{/if}}
 {{#if natspec.params}}
-#### Parameters
+### Parameters
 | Name | Type | Description                                                          |
 | :--- | :--- | :------------------------------------------------------------------- |
 {{#natspec.params}}
 |`{{param}}` | {{#lookup ../args.types @index}}{{/lookup}} | {{ description }}{{/natspec.params}}{{/if}}
 {{#if natspec.returns}}
-#### Return Values
+### Return Values
 | Returns | Type          | Description                                                                  |
 | :-------| :------------ | :--------------------------------------------------------------------------- |
 {{#natspec.returns}}
 | ⇒ | {{#lookup ../args.types @index}}{{/lookup}} | {{{description}}}{{/natspec.returns}}{{/if}}
+----
 {{/ownFunctions}}
 {{#if ownEvents}}
-## Events
+# Events
 {{/if}}
 {{#ownEvents}}
-### {{name}}
+## {{name}}
 ```solidity
   event {{name}}(
     {{#natspec.params}}
@@ -48,4 +49,5 @@
 | :----------------------------- | :------------ | :--------------------------------------------- |
 {{#natspec.params}}
 |`{{param}}`| {{#lookup ../args.types @index}}{{/lookup}} | {{{description}}}{{/natspec.params}}{{/if}}
+----
 {{/ownEvents}}
